AC_PREREQ(2.59)

AC_INIT(thriftcpp, 1.0)

AC_CONFIG_SRCDIR(src/Thrift.h)

AM_INIT_AUTOMAKE

AC_FUNC_MALLOC

AC_FUNC_REALLOC

AC_FUNC_SELECT_ARGTYPES

AC_CHECK_FUNCS([bzero])

AC_CHECK_FUNCS([gethostbyname])

AC_CHECK_FUNCS([gettimeofday])

AC_CHECK_FUNCS([memset])

AC_CHECK_FUNCS([select])

AC_CHECK_FUNCS([socket])

AC_CHECK_FUNCS([strtol])

AC_CHECK_FUNCS([strtoul])

AC_CHECK_HEADERS([arpa/inet.h])

AC_CHECK_HEADERS([fcntl.h])

AC_CHECK_HEADERS([inttypes.h])

AC_CHECK_HEADERS([netdb.h])

AC_CHECK_HEADERS([netinet/in.h])

AC_CHECK_HEADERS([pthread.h])

AC_CHECK_HEADERS([stddef.h])

AC_CHECK_HEADERS([sys/socket.h])

AC_CHECK_HEADERS([sys/time.h])

AC_CHECK_HEADERS([unistd.h])

AX_BOOST_BASE([1.33.1])

AX_EVENT_BASE([1.2.0])

AC_CHECK_LIB(pthread, pthread_create)

AC_CHECK_LIB(rt, sched_get_priority_min)

AC_CHECK_FUNCS([clock_gettime])

AC_C_CONST

AC_C_VOLATILE

AC_HEADER_STDBOOL

AC_HEADER_STDC

AC_HEADER_TIME

AC_TYPE_OFF_T

AC_TYPE_MODE_T

AC_TYPE_SIZE_T

AC_TYPE_INT16_T

AC_TYPE_INT32_T

AC_TYPE_INT64_T

AC_TYPE_UINT16_T

AC_TYPE_UINT32_T

AC_TYPE_UINT64_T

AC_TYPE_UINT8_T

AC_CONFIG_HEADERS(config.h:config.hin)

AC_PROG_CC

AC_PROG_CXX

AC_PROG_INSTALL

AC_PROG_LIBTOOL

CFLAGS="-O2"

CXXFLAGS="-O2"

AC_OUTPUT(Makefile)
